Lots of progress. Need to sit for a bit and think about how it can be optimized.
Signed-off-by: Kevin Putnam <kevin.putnam@gmail.com>

--- a/editor.html
+++ b/editor.html
@@ -8,13 +8,13 @@
 <body>
     <div id="editor" class="editor">
         <div id="gameview">
-            <h2>Game Data</h2>
+            <h2><span id="gametitle">Game Data<span></h2>
             <div id="gamedata">
             </div>
         </div>
         <div id="mapview"></div>
         <div id="sceneview">
-            <h2>Scene Data</h2>
+            <h2><span id="scenetitle">Scene Data</span></h2>
             <div id="scenedata"></div>
         </div>
     </div>
